DDMsgReader: When changing sub-boards, now supports cycling through sort options via [ and ] (for nelgin). Also, new scrolling window for help text for changing sub-boards. When changing to another sub-board, the user can now cycle through the sort options with the [ and ] keys. Also, updated the change sub-board help to show in a scrollable window for users with ANSI terminals, rather than simply displaying the help with a pause at the end. Other help screens could potentially be shown this way too. New theme configuration options: helpWinBorderColor and scrollingWinHelpTextColor

--- a/xtrn/DDMsgReader/DefaultTheme.cfg
+++ b/xtrn/DDMsgReader/DefaultTheme.cfg
@@ -274,6 +274,12 @@ editMsgNumPromptText=\x01n\x01cNumber of the message to be edited (or \x01hENTER
 ; Traditional/lightbar interface help screen text color
 tradInterfaceHelpScreenColor=nc
 
+; Scrolling help window border color
+helpWinBorderColor=nr
+
+; Scrolling help window text color
+scrollingWinHelpTextColor=nc
+
 ; -------- Colors for message header/kludge lines --------
 hdrLineLabelColor=nc
 hdrLineValueColor=nbh
