--- a/src/sbbs3/GNUmakefile
+++ b/src/sbbs3/GNUmakefile
@@ -325,7 +325,7 @@ $(FMSGDUMP): $(FMSGDUMP_OBJS) | $(EXEODIR) $(OBJODIR)
 # TRASHMAN
 $(TRASHMAN): $(TRASHMAN_OBJS) | $(EXEODIR) $(OBJODIR)
 	@echo Linking $@
-	$(QUIET)$(CC) $(CONSOLE_LDFLAGS) -o $@ $^ -lm
+	$(QUIET)$(CC) $(CONSOLE_LDFLAGS) -o $@ $^ $(XPDEV_LIBS)
 
 $(UPGRADE_TO_V319): $(UPGRADE_TO_V319_OBJS) $(OBJODIR) | $(EXEODIR)
 	@echo Linking $@
