--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,6 +73,13 @@ include:
       tagname: 'macOS'
       gnu_make: 'make'
       build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1'
+  - local: '.gitlab-ci-unix.yml'
+    inputs:
+      os: 'darwin'
+      platform: 'aarch64'
+      tagname: 'macOS-aarch64'
+      gnu_make: 'make'
+      build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1'
 
 smoketest-jsexec-linux:
   tags: [Linux]
