--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,7 +79,7 @@ include:
       platform: 'aarch64'
       tagname: 'macOS-aarch64'
       gnu_make: 'make'
-      build_flags: ''
+      build_flags: 'RELEASE=1'
 
 smoketest-jsexec-linux:
   tags: [Linux]
