Update libffi in SpiderMonkey
With a couple patches to build on macOS M2
Use standard isfinite() instead of never-standard finite()
Don't use -rpath-link on darwin (since it won't work anyway)

--- a/src/conio/CMakeLists.txt
+++ b/src/conio/CMakeLists.txt
@@ -84,6 +84,9 @@ else()
 	if(${CMAKE_SYSTEM_NAME} MATCHES "(Free|Open|Net)BSD")
 		list(APPEND SOURCE curs_cio.c)
 		set(USE_CURSES_ANYWAY TRUE)
+	elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+		list(APPEND SOURCE curs_cio.c)
+		set(USE_CURSES_ANYWAY TRUE)
 	else()
 		if(NOT WIN32)
 			message(FATAL_ERROR "No wide-capable curses found")
