--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,18 +68,18 @@ include:
       has_curses: 'no'
   - local: '.gitlab-ci-unix.yml'
     inputs:
-      os: 'darwin-x86'
-      platform: 'x86'
-      tagname: 'macOS-x86'
-      gnu_make: 'make'
-      build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1'
-  - local: '.gitlab-ci-unix.yml'
-    inputs:
       os: 'darwin-aarch64'
       platform: 'aarch64'
       tagname: 'macOS-aarch64'
       gnu_make: 'make'
       build_flags: 'RELEASE=1'
+#  - local: '.gitlab-ci-unix.yml'
+#    inputs:
+#      os: 'darwin-x86'
+#      platform: 'x86'
+#      tagname: 'macOS-x86'
+#      gnu_make: 'make'
+#      build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1'
 
 smoketest-jsexec-linux:
   tags: [Linux]
