Older versions of macOS had a crappier version of patch
So dos2unix 'em all.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,7 +79,7 @@ include:
       platform: 'x86'
       tagname: 'macOS-x86'
       gnu_make: 'make'
-      build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1 VERBOSE=1'
+      build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1'
 
 smoketest-jsexec-linux:
   tags: [Linux]
