Add brew --prefix too
Also fix last commit

--- a/src/sbbs3/GNUmakefile
+++ b/src/sbbs3/GNUmakefile
@@ -109,11 +109,11 @@ ifeq ($(shell pkg-config libarchive --exists && echo "yes"),yes)
  FILE_LIBS	= $(shell pkg-config libarchive --libs)
 else
  ifeq ($(os), darwin)
-  if ($(shell test -d /opt/homebrew/opt/libarchive/include && echo "yes"),yes)
+  ifeq ($(shell test -d /opt/homebrew/opt/libarchive/include && echo "yes"),yes)
     CFLAGS += -I/opt/homebrew/opt/libarchive/include -I/opt/homebrew/include
     LDFLAGS += -L/opt/homebrew/opt/libarchive/lib -I/opt/homebrew/lib
   else
-    if ($(shell test -d /usr/local/opt/libarchive/include && echo "yes"),yes)
+    ifeq ($(shell test -d /usr/local/opt/libarchive/include && echo "yes"),yes)
       CFLAGS += -I/usr/local/opt/libarchive/include -I/opt/local/include
       LDFLAGS += -L/usr/local/opt/libarchive/lib -I/opt/local/lib
     endif
