Add FidoNet Zone 2 and Zone 4 coordinator names and contact info
Are there official echolists for these zones?

--- a/exec/init-fidonet.ini
+++ b/exec/init-fidonet.ini
@@ -39,6 +39,10 @@ echolist = http://www.filegate.net/pub/backbone/BACKBONE.NA
 [zone:2]
 name  = FidoNet
 desc  = Europe, Former Soviet Union countries, and Israel
+coord = Ward Dossche
+email = wd@skynet.be
+fido  = 2:292/854
+dns   = binkp.net
 
 [zone:3]
 name  = FidoNet
@@ -47,6 +51,10 @@ desc  = Australasia
 [zone:4]
 name  = FidoNet
 desc  = Latin America (except Puerto Rico)
+coord = Fernando Toledo
+email = ragnarok@docksud.com.ar
+fido  = 4:902/26
+dns   = binkp.net
 
 [zone:11]
 name  = WWIVnet
