Update AmigaNet and Fido zone 4 details
Use BACKBONE.NA from Vertrauen as echolist for all Fido zones
(anyone have a better authoritative http link to a fixed file
name or archive name?).

--- a/exec/init-fidonet.ini
+++ b/exec/init-fidonet.ini
@@ -1,5 +1,3 @@
-; $Id: init-fidonet.ini,v 1.14 2020/09/24 19:42:33 rswindell Exp $
-
 ; Data file for init-fidonet.js (FidoNet Initial Setup script for Synchronet)
 
 ; If you find any information to be missing or incorrect, please let
@@ -34,7 +32,7 @@ coord = Nick Andre
 email = nandre@net229.org
 fido  = 1:229/426
 dns   = binkp.net
-echolist = http://www.filegate.net/pub/backbone/BACKBONE.NA
+echolist = http://web.synchro.net/files/FidoNet/ECHOLIST/BACKBONE.NA
 
 [zone:2]
 name  = FidoNet
@@ -43,18 +41,22 @@ coord = Ward Dossche
 email = wd@skynet.be
 fido  = 2:292/854
 dns   = binkp.net
+echolist = http://web.synchro.net/files/FidoNet/ECHOLIST/BACKBONE.NA
 
 [zone:3]
 name  = FidoNet
 desc  = Australasia
+echolist = http://web.synchro.net/files/FidoNet/ECHOLIST/BACKBONE.NA
 
 [zone:4]
 name  = FidoNet
 desc  = Latin America (except Puerto Rico)
+info  = https://fido.bbs.docksud.com.ar/
 coord = Fernando Toledo
 email = ragnarok@docksud.com.ar
 fido  = 4:902/26
 dns   = binkp.net
+echolist = http://web.synchro.net/files/FidoNet/ECHOLIST/BACKBONE.NA
 
 [zone:11]
 name  = WWIVnet
@@ -101,8 +103,8 @@ coord = Wilfred van Velzen
 email = amiganet.z39c@gmail.com
 addr  = 39:39/0
 fido  = 2:280/464
-host  = fido.vlzn.nl
-echolist = http://www.vlzn.nl/AmigaNet/AmigaNetEchomailAreas.na
+host  = amiganet.fidoweb.net
+echolist = https://amiganet.fidoweb.net/AmigaNetEchomailAreas.na
 areatitle_prefix = AmigaNet:
 
 [zone:40]
