--- a/src/syncterm/Info.plist
+++ b/src/syncterm/Info.plist
@@ -21,7 +21,7 @@
 	<string>SyncTERM</string>
 
 	<key>CFBundleShortVersionString</key>
-	<string>1.2rc6</string>
+	<string>1.2</string>
 
 	<key>CFBundleGetInfoString</key>
 	<string>An ANSI-BBS terminal which supports telnet, rlogin, and SSH</string>
