--- a/src/syncterm/dpkg-control.in
+++ b/src/syncterm/dpkg-control.in
@@ -1,5 +1,5 @@
 Package: syncterm
-Version: 1.2rc6
+Version: 1.2
 Maintainer: Deuce <shurd@sasktel.net>
 Architecture: %%ARCH%%
 Description: ANSI Terminal for BBSs
