--- a/src/syncterm/CMakeLists.txt
+++ b/src/syncterm/CMakeLists.txt
@@ -9,8 +9,8 @@ set(WITHOUT_OOII OFF CACHE BOOL "Disable Operation Overkill ][ Terminal")
 set(CPACK_PACKAGE_NAME SyncTERM)
 set(CPACK_PACKAGE_VENDOR Deuce)
 set(CPACK_PACKAGE_VERSION_MAJOR 1)
-set(CPACK_PACKAGE_VERSION_MINOR 2)
-set(CPACK_PACKAGE_VERSION_PATCH beta)
+set(CPACK_PACKAGE_VERSION_MINOR 3)
+set(CPACK_PACKAGE_VERSION_PATCH alpha)
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "SyncTERM is a Telnet/RLogin/SSH BBS Client")
 set(CPACK_PACKAGE_INSTALL_DIRECTORY SyncTERM)
 #set(CPACK_PACKAGE_ICON ${CMAKE_CURRENT_LIST_DIR}/syncterm.png)
