--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,13 +73,13 @@ include:
       tagname: 'macOS-aarch64'
       gnu_make: 'make'
       build_flags: 'RELEASE=1'
-  - local: '.gitlab-ci-unix.yml'
-    inputs:
-      os: 'darwin-x86'
-      platform: 'x86'
-      tagname: 'macOS-x86'
-      gnu_make: 'make'
-      build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1'
+#  - local: '.gitlab-ci-unix.yml'
+#    inputs:
+#      os: 'darwin-x86'
+#      platform: 'x86'
+#      tagname: 'macOS-x86'
+#      gnu_make: 'make'
+#      build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1'
 
 smoketest-jsexec-linux:
   tags: [Linux]
