--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,6 +50,13 @@ include:
       build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1'
   - local: '.gitlab-ci-unix.yml'
     inputs:
+      os: "alpine-linux"
+      platform: "x64"
+      tagname: "alpine-linux"
+      build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1'
+      no_javascript: 'yes'
+  - local: '.gitlab-ci-unix.yml'
+    inputs:
       os: 'mingw-w64'
       platform: 'x86'
       tagname: 'FreeBSD'
