Load/force-saved the config files in latest SCFG
Adds new keys, removes old ones

Updates formatting/white-space

--- a/ctrl/sbbs.ini
+++ b/ctrl/sbbs.ini
@@ -9,7 +9,7 @@
 	; Override system address for this instance (optional):
 	Hostname =
 	; IP address of network interface to bind to (defaults to ANY/ALL interfaces):
-	Interface =
+	Interface = 0.0.0.0,::
 	; IPv4 address of network interface to use for outgoing connections
 	OutboundInterface =
 	; Override the SBBSCTRL environment variable (optional):
@@ -20,30 +20,29 @@
 	; of this temp dir.
 	TempDirectory =
 	; Increase this value to decrease semaphore file checking frequency (actually an interval):
-	SemFileCheckFrequency = 2	; seconds
+	SemFileCheckFrequency = 2s
 	; Set the number of times a bind will be attempted for each port.
 	; increase this if you get errors binding to ports on reloads
 	BindRetryCount = 2
 	; Delay between bind retries
-	BindRetryDelay = 15             ; seconds
+	BindRetryDelay = 15
 	; Highest log level to actually log/print (ignore all higher/less-severe log msgs):
 	; This log level may be overridden for each server/service
 	; Supported log levels in decreasing severity (ala syslog):
 	; Emergency, Alert, Critical, Error, Warning, Notice, Informational, Debugging
-	LogLevel = Informational
+	LogLevel = Info
 	TLSErrorLevel = Warning
 	; JavaScript values can be specified here *and* in server-specific sections
 	; JavaScript values specified in server-specific sections will over-ride the global values
 	; Maximum allocation of memory per JS run-time:
 	JavaScriptMaxBytes = 160M
 	; Maximum number of ticks (100ms) before auto-termination of script:
-	JavaScriptTimeLimit = 864000
+	JavaScriptTimeLimit =
 	; Garbage Collection interval (in ticks):
-	JavaScriptGcInterval = 100
+	JavaScriptGcInterval =
 	; Time-slice yield interval (in ticks):
-	JavaScriptYieldInterval = 10000
+	JavaScriptYieldInterval =
 	; Comma-separated list of load paths (relative to exec or mods directories):
-	JavaScriptLoadPath = load
 	; Failed login-attempt tracking, throttling, logging, and filtering:
 	LoginAttemptDelay = 5000
 	LoginAttemptThrottle = 1000
@@ -58,6 +57,7 @@
 	LoginSound =
 	LogoutSound =
 	HackAttemptSound =
+	LoginRequirements = 
 
 [BBS]	Terminal (Telnet, SSH, RLogin, Raw-TCP) Server
 	; Set to 'false' to disable Telnet/Rlogin/Event server:
@@ -174,6 +174,7 @@
 	;       GET_IDENT
 	;       HAPROXY_PROTO
 	Options = XTRN_MINIMIZED | ALLOW_RLOGIN | ALLOW_SSH
+	ExternalTermANSI = pc3
 
 [Mail]	SMTP(S)/POP3(S) Mail Server
 	AutoStart = true
@@ -192,7 +193,7 @@
 	POP3Interface = 
 	POP3Port = 110
 	TLSPOP3Port = 995
-	TLSErrorLevel = Warning
+	TLSErrorLevel =
 	DefaultCharset = IBM437
 	DefaultUser = 
 	DNSBlacklistHeader = X-DNSBL
@@ -207,7 +208,7 @@
 	POP3Sound = 
 	InboundSound = 
 	OutboundSound = 
-	ConnectTimeout = 30
+	ConnectTimeout = 30s
 	NotifyOfflineUsers = true
 	MaxConcurrentConnections = 0
 
@@ -243,6 +244,7 @@
 	;	TLS_SUBMISSION	- Listen on the TLS "MSA" service port for mail submissions
 	;	TLS_POP3		- Listen on the TLS POP3 service port
 	Options = ALLOW_POP3 | USE_SUBMISSION_PORT | TLS_SUBMISSION | TLS_POP3
+	SpamBlockDuration = 0
 
 [FTP]	FTP(S) Server
 	AutoStart = true
@@ -283,6 +285,7 @@
 	; 	NO_HOST_LOOKUP
 	;	NO_RECYCLE
 	Options = INDEX_FILE | ALLOW_QWK
+	PasvIp6Address = ::
 
 [Web]	HTTP(S) Server
 	AutoStart = true
@@ -292,7 +295,7 @@
 	; HTTPS interface(s)
 	TLSInterface = 
 	TLSPort = 443
-	TLSErrorLevel = Warning
+	TLSErrorLevel =
 	MaxClients = 100
 	RootDirectory = ../webv4/root
 	ErrorDirectory = error
@@ -325,7 +328,8 @@
 	; 	NO_HOST_LOOKUP
 	;	NO_RECYCLE
 	; 	NO_JAVASCRIPT
-	Options = NO_HOST_LOOKUP | ALLOW_TLS | NO_CGI
+	Options = NO_CGI | ALLOW_TLS | NO_HOST_LOOKUP
+	MaxConcurrentConnections = 10
 
 [Services]
 	AutoStart = true
@@ -337,6 +341,7 @@
 	; Supported options (separated with |):
 	; 	NO_HOST_LOOKUP
 	Options = NO_HOST_LOOKUP
+	iniFileName = services.ini
 
 [UNIX]
 	; User/group name to run as
