DDFileLister: New configuration setting: useFilenameIfNoDescription - If a description is empty, show the filename in the list instead. For Retro Guy.

--- a/xtrn/ddfilelister/ddfilelister.cfg
+++ b/xtrn/ddfilelister/ddfilelister.cfg
@@ -31,5 +31,9 @@ blankNFilesListedStrIfLoadableModule=true
 ; information for files
 displayUserAvatars=true
 
+; If a file's description is unavailable, whether or not to use the
+; filename in the list instead
+useFilenameIfNoDescription=true
+
 ; The name of the color theme configuration file
 themeFilename=defaultTheme.cfg
