--- a/src/syncterm/CMakeLists.txt
+++ b/src/syncterm/CMakeLists.txt
@@ -30,6 +30,7 @@ INCLUDE (CheckIncludeFiles)
 find_package(PkgConfig)
 if(NOT WITHOUT_JPEG_XL)
 	pkg_check_modules(JPEG_XL libjxl)
+	pkg_check_modules(JPEG_XL_THREADS libjxl_threads)
 endif()
 
 set(SOURCE
@@ -138,6 +139,14 @@ if(NOT WITHOUT_JPEG_XL)
 		target_link_directories(syncterm PRIVATE ${JPEG_XL_LIBRARY_DIRS})
 		target_link_libraries(syncterm ${JPEG_XL_LIBRARIES})
 		target_link_options(syncterm PRIVATE ${JPEG_XL_LDFLAGS})
+		if(JPEG_XL_THREADS_FOUND)
+			target_compile_definitions(syncterm PUBLIC WITH_JPEG_XL_THREADS)
+			target_include_directories(syncterm PRIVATE ${JPEG_XL_THREADS_INCLUDE_DIRS})
+			target_compile_options(syncterm PRIVATE ${JPEG_XL_THREADS_CFLAGS})
+			target_link_directories(syncterm PRIVATE ${JPEG_XL_THREADS_LIBRARY_DIRS})
+			target_link_libraries(syncterm ${JPEG_XL_THREADS_LIBRARIES})
+			target_link_options(syncterm PRIVATE ${JPEG_XL_THREADS_LDFLAGS})
+		endif()
 	endif()
 endif()
 
