Fix GTK stuff for macOS
Remove the -E linker flag.
This should not be needed anymore, and isn't supported on macOS.

Have shared libraries include their full path.
This allows linked dylibs to work from where they were built, so
as long as you don't build the binaries on a CI machine, then try
to run them on a users machine (*cough*), it'll work out.

Use the correct rpath argument format on macOS.
It uses -rpath, not --rpath.

--- a/src/sbbs3/GNUmakefile
+++ b/src/sbbs3/GNUmakefile
@@ -150,12 +150,16 @@ ifndef NO_LD_RUN_PATH
 endif
 
 CON_LIBS	+= -lsbbs -lftpsrvr -lwebsrvr -lmailsrvr -lservices
-SHLIBOPTS	:=	-shared
 ifeq ($(os),sunos)
  MKSHLIB		:=	/usr/ccs/bin/ld -G
  MKSHPPLIB		:=	/usr/ccs/bin/ld -G
  SHLIBOPTS	:=
 else
+ ifeq ($(os),darwin)
+  SHLIBOPTS	=	-shared -install_name `realpath $(SBBSDIR)`/$@
+ else
+  SHLIBOPTS	:=	-shared
+ endif
  MKSHLIB		:=	$(CC)
  MKSHPPLIB		:=	$(CXX)
 endif
