Enable it on x86 mac too.
Whee!

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,6 +87,7 @@ include:
       platform: 'x86'
       tagname: 'macOS-x86'
       gnu_make: 'make'
+      has_gtk: "yes"
       build_flags: 'CC="ccache cc" CXX="ccache c++" RELEASE=1'
 
 smoketest-jsexec-linux:
