--- a/src/syncterm/Info.plist
+++ b/src/syncterm/Info.plist
@@ -21,7 +21,7 @@
 	<string>SyncTERM</string>
 
 	<key>CFBundleShortVersionString</key>
-	<string>1.3a</string>
+	<string>1.4b</string>
 
 	<key>CFBundleGetInfoString</key>
 	<string>An ANSI-BBS terminal which supports telnet, rlogin, and SSH</string>
@@ -74,7 +74,7 @@
 	</array>
 
 	<key>CFBundleVersion</key>
-	<string>1.3</string>
+	<string>1.4</string>
 
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
