Enable the trashman monthly event in new installs
Cleans-up (deletes) expired filters in text/ip.can and ctrl/spamblock.cfg

--- a/ctrl/main.ini
+++ b/ctrl/main.ini
@@ -87,8 +87,8 @@ errlevel=2
 	settings=0
 
 [monthly_event]
-	cmd=
-	settings=0
+	cmd=%!trashman %z*.can %kspamblock.cfg
+	settings=0x4001
 
 [expired]
 	level=0
