Enable Minesweeper graphics mode by default

--- a/ctrl/xtrn.ini
+++ b/ctrl/xtrn.ini
@@ -81,7 +81,7 @@
 	settings=1
 	event=0
 	cost=0
-	cmd=?minesweeper
+	cmd=?minesweeper graphics
 	clean_cmd=
 	startup_dir=../xtrn/minesweeper/
 	textra=0
