Include '.exe' suffix for trashman utility on Windows

--- a/ctrl/main.ini
+++ b/ctrl/main.ini
@@ -87,7 +87,7 @@ errlevel=2
 	settings=0
 
 [monthly_event]
-	cmd=%!trashman %z*.can %kspamblock.cfg
+	cmd=%!trashman%. %z*.can %kspamblock.cfg
 	settings=0x4001
 
 [expired]
