Add Oblivion/2 Command Shell, update access requirements for several others
Most of these shells (their menu/display files really) require a terminal at
least 80 columns wide to look/work right.

--- a/ctrl/main.ini
+++ b/ctrl/main.ini
@@ -1255,19 +1255,19 @@ errlevel=2
 	settings=0
 [shell:SIMPLE]
 	name=Synchronet (Novice)
-	ars=ANSI
+	ars=COLS 80
 	settings=0
 [shell:WWIV]
 	name=WWIV Clone
-	ars=
+	ars=COLS 80
 	settings=0
 [shell:PCBOARD]
 	name=PCBoard Clone
-	ars=
+	ars=COLS 80
 	settings=0
 [shell:WILDCAT]
 	name=Wildcat Clone
-	ars=
+	ars=COLS 80
 	settings=0
 [shell:MAJOR]
 	name=MajorBBS Clone
@@ -1275,9 +1275,13 @@ errlevel=2
 	settings=0
 [shell:RENEGADE]
 	name=Renegade Clone
-	ars=
+	ars=COLS 80
 	settings=0
 [shell:LBSHELL]
 	name=Deuce's Lightbar Shell
 	ars=ANSI
+	settings=0
+[shell:OBV-2]
+	name=Oblivion/2 Clone
+	ars=COLS 80
 	settings=0
