Disabling ircd/TLS (port 6697) by default
See issue #854 for details

--- a/ctrl/ircd.ini
+++ b/ctrl/ircd.ini
@@ -25,8 +25,8 @@ SSL=false
 ;[Port:994]
 ;SSL=true
 
-[Port:6697]
-SSL=true
+;[Port:6697]
+;SSL=true
 
 [Class:1]
 Comment=Regular, unauthenticated users from the Internet
