LBSHELL really needs 80 columns or more to work right
Also, change the shell order a little

--- a/ctrl/main.ini
+++ b/ctrl/main.ini
@@ -1277,11 +1277,11 @@ errlevel=2
 	name=Renegade Clone
 	ars=COLS 80
 	settings=0
-[shell:LBSHELL]
-	name=Deuce's Lightbar Shell
-	ars=ANSI
-	settings=0
 [shell:OBV-2]
 	name=Oblivion/2 Clone
 	ars=COLS 80
+	settings=0
+[shell:LBSHELL]
+	name=Deuce's Lightbar Shell
+	ars=COLS 80 AND ANSI
 	settings=0
