Set the AdditionalManifestFiles as a property sheet
This is the (better) way. See, Deuce knows the coolness of property sheets!

--- a/src/conio/conio_gdi.props
+++ b/src/conio/conio_gdi.props
@@ -14,6 +14,9 @@
       <AdditionalDependencies>winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Windows</SubSystem>
     </Link>
+    <Manifest>
+      <AdditionalManifestFiles>$(MSBuildThisFileDirectory)ciolib.manifest</AdditionalManifestFiles>
+    </Manifest>
   </ItemDefinitionGroup>
   <ItemGroup />
 </Project>
