--- a/ctrl/file.ini
+++ b/ctrl/file.ini
@@ -1,4 +1,4 @@
-min_dspace=100M
+min_dspace=1G
 max_batup=25
 max_batdn=100
 max_userxfer=5
@@ -6,7 +6,7 @@ upload_credit_pct=100
 download_credit_pct=90
 leech_pct=0
 leech_sec=60
-settings=0
+settings=4
 filename_maxlen=64
 [viewer:0]
 	extension=TXT
