Overhaul LZH code
- Rename variables and macros to be more readable.
- Split encoding and decoding variables into separate structs so
  they don't all need to be on the stack
- Stop using signed values for anything
  This also stops depending on left-shifting into the sign bit
  "working" as expected... something compilers can optimize out
- Use size-based types instead of short/long
- Make the encoded buffer endian-agnostic (convert to little-endian)
- Clean up lzh_update() a bit

--- a/src/encode/GNUmakefile
+++ b/src/encode/GNUmakefile
@@ -20,4 +20,4 @@ endif
 
 # Test build
 lzh${EXEFILE}: lzh.c
-	$(QUIET)$(CC) -std=c11 $(CFLAGS) -DLZH_TEST $(CCFLAGS) -o $@ $<
+	$(QUIET)$(CC) -std=c11 $(CFLAGS) -Wall -pedantic -DLZH_TEST $(CCFLAGS) -o $@ $<
