Make the default graphcis mode scaling factor: 2
This especially important/noticeable on a 4K monitor.

--- a/ctrl/uifc.ini
+++ b/ctrl/uifc.ini
@@ -12,5 +12,5 @@ lines = 0 (auto)
 insert = true	
 ; Milliseconds to wait for escape sequence, differentiating between ESC key press and extended key escape sequence
 esc_delay = 25	
-; Initial display scale of graphical window, fractions supported
-scaling	= 0 (auto)
+; Initial display scale of graphical window, fractions supported (0 = auto)
+scaling	= 2
