Add Shell support for Windows
Requires Windows 10 or higher.  This changes the default SyncTERM
builds to require Windows 10.  To build for other versions, you
need to pass WIN32, WINVER, WIN32_IE, and NTDDI to build script.

These need to be whatever they need to be for old stuff to work.

--- a/src/syncterm/GNUmakefile
+++ b/src/syncterm/GNUmakefile
@@ -1,4 +1,8 @@
 SRC_ROOT	:=	..
+WINVER ?= 0xA00
+WINNT ?= 0xA00
+WIN32_IE ?= 0xA00
+NTDDI ?= 0x0A000006
 include ${SRC_ROOT}/build/Common.gmake
 
 ifdef NEED_BITMAP
@@ -46,6 +50,7 @@ ifdef win
  CFLAGS += -DWITH_JPEG_XL -DWITH_STATIC_JXL
  CFLAGS += -DWITH_JPEG_XL_THREADS
  OBJS += $(MTOBJODIR)$(DIRSEP)libjxl$(OFILE)
+ OBJS += $(MTOBJODIR)$(DIRSEP)conn_conpty$(OFILE)
 else
  ifeq ($(shell pkg-config libjxl --exists && echo YES), YES)
   CFLAGS += $(shell pkg-config libjxl --cflags)
