I guess the MSVC platform toolset is Win10+ as well.

--- a/src/syncterm/SyncTERM.vcxproj
+++ b/src/syncterm/SyncTERM.vcxproj
@@ -123,6 +123,7 @@
     <ClCompile Include="..\xpdev\xpbeep.c" />
     <ClCompile Include="bbslist.c" />
     <ClCompile Include="conn.c" />
+    <ClCompile Include="conn_conpty.c" />
     <ClCompile Include="conn_telnet.c" />
     <ClCompile Include="fonts.c" />
     <ClCompile Include="menu.c" />
