Add File Manager to Operator menu in default config
Change internal code of "xtrn-setup" from XSETUP to XTRN-SETUP (we have plenty
of chars available for internal codes now).

--- a/ctrl/xtrn.ini
+++ b/ctrl/xtrn.ini
@@ -129,6 +129,20 @@
 	textra=0
 	max_time=0
 	max_inactivity=0
+[prog:OPERATOR:FILEMAN]
+	name=File Manager
+	ars=ANSI
+	execution_ars=
+	type=0
+	settings=0x104005
+	event=0
+	cost=0
+	cmd=%!jsexec%. fileman ansi
+	clean_cmd=
+	startup_dir=
+	textra=0
+	max_time=0
+	max_inactivity=0
 [prog:OPERATOR:FTNSETUP]
 	name=Initial FidoNet Setup
 	ars=
@@ -171,7 +185,7 @@
 	textra=0
 	max_time=0
 	max_inactivity=0
-[prog:OPERATOR:XSETUP]
+[prog:OPERATOR:XTRN-SETUP]
 	name=Auto-install New External Programs
 	ars=
 	execution_ars=
