Redirect jsexec status output to nul when running fileman

--- a/ctrl/xtrn.ini
+++ b/ctrl/xtrn.ini
@@ -137,7 +137,7 @@
 	settings=0x104005
 	event=0
 	cost=0
-	cmd=%!jsexec%. fileman ansi
+	cmd=%!jsexec%. -n fileman ansi
 	clean_cmd=
 	startup_dir=
 	textra=0
