Add support for the '$' field specifier delimiter thing.
Just in case xp_asprintf() is used for text.dat strings.
The field specifier allows you to change the order of parameters,
which is useful for translating (and useless for anything else).

There must not be any "skipped" parameters though, you must use
all of them between the first one and the last one you use.

--- a/src/xpdev/GNUmakefile
+++ b/src/xpdev/GNUmakefile
@@ -61,3 +61,6 @@ $(XPDEV-MT_SHLIB_BUILD): $(MTOBJS) | $(MTOBJODIR)
 	@echo Creating $@
 	$(QUIET)$(MKSHLIB) $(LDFLAGS) $(MTOBJS) $(SHLIBOPTS) -o $@
 
+xpprintf_test: xpprintf.c $(DEPS)
+	@echo Linking $@
+	$(QUIET)$(CC) $(CFLAGS) $(MT_CFLAGS) -DXP_PRINTF_TEST $< -o $@ $(LDFLAGS) $(MT_LDFLAGS) $(XPDEV-MT_LIB_BUILD) -lm $(XPDEV-MT_LIBS)
