--- a/src/uncrustify.cfg
+++ b/src/uncrustify.cfg
@@ -2304,7 +2304,7 @@ nl_create_list_one_liner        = false    # true/false
 
 # Whether to split one-line simple unbraced if statements into two lines by
 # adding a newline, as in 'if(b) <here> i++;'.
-nl_split_if_one_liner           = false    # true/false
+nl_split_if_one_liner           = true     # true/false
 
 # Whether to split one-line simple unbraced for statements into two lines by
 # adding a newline, as in 'for (...) <here> stmt;'.
