Update for latest uncrustify
Still not completely happy with it.

--- a/src/syncterm/uncrustify.cfg
+++ b/src/syncterm/uncrustify.cfg
@@ -181,7 +181,7 @@ nl_before_func_body_def = 2
 nl_after_func_proto = 1
 nl_after_func_proto_group = 2
 nl_after_func_body = 2
-nl_func_var_def_blk = 1
+nl_var_def_blk_end_func_top = 1
 nl_typedef_blk_start = 2
 nl_typedef_blk_end = 2
 nl_typedef_blk_in = 2
@@ -209,7 +209,7 @@ pos_bool = lead
 pos_compare = lead
 pos_conditional = lead
 pos_comma = trail
-pos_enum_comma = trail_break
+pos_enum_comma = lead_force
 pos_shift = lead
 
 #Line splitting options
@@ -256,7 +256,7 @@ mod_enum_last_comma = remove
 
 #Preprocessor options
 pp_indent = force
-pp_space = remove
+pp_space_after = remove
 pp_space_count = 1
 
 #Use or Do not Use options
